test/spec_vectors/local_tee/fail/module_28.wat
(module (func $type-param-arg-empty-vs-num-in-local.tee (param i32) (local.tee 0 (local.tee 0)) (drop)))